style change to fix animation on mobile

--- a/src/styles/owner.css
+++ b/src/styles/owner.css
@@ -6,7 +6,6 @@
   border-radius: 1.5rem;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
   margin-bottom: 8rem;
-  max-height: 1200px;
 
   h2 {
     text-align: center;
@@ -56,5 +55,6 @@
 @media only screen and (max-width: 700px) {
     .about-owner {
         margin-bottom: 0;
+        height: 1200px;
     }
  }
